fix issue on mobile

--- a/_src-lp/blocks/banner-with-dropdown/banner-with-dropdown.scss
+++ b/_src-lp/blocks/banner-with-dropdown/banner-with-dropdown.scss
@@ -543,7 +543,7 @@
   display: none;
 }
 
-.section.banner-with-dropdown-container .pricesBox:nth-of-type(2) {
+.section.banner-with-dropdown-container .pricesBox.active {
   display: block;
 }
 
